projects/vb6parse/snapshots/parsers/cst/library/conversion/cverr/cverr_division_by_zero.snap
---
source: projects/vb6parse/tests/library/conversion/cverr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: ErrorKeyword
              text: error
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: CVErr
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "2007"
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
