projects/vb6parse/snapshots/parsers/cst/library/conversion/cverr/cverr_in_if_condition.snap
---
source: projects/vb6parse/tests/library/conversion/cverr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: value
            - kind: Whitespace
              text: " "
            - kind: LessThanOperator
              text: "<"
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "0"
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: result
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: CVErr
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "2036"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: IfKeyword
          text: If
        - kind: Newline
          text: "\n"
